# SwitchBotController

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
docs/uml/: ClassDiagram.puml  ComponentDiagram.puml  PackageDiagram.puml  UseCaseDiagram.puml
src/: CMakeLists.txt
src/application/domain/model/: brightness.cpp  brightness.hpp  brightnessSensor.hpp
src/infrastructure/clients/: SwitchbotAPIClient.cpp  SwitchbotAPIClient.hpp
src/infrastructure/sensors/: VCNL4040Sensor.cpp  VCNL4040Sensor.hpp
src/main/: main.cpp
